--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "It consist demonstration of api authentication using JWT with nodejs",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rishav Pandey",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
