--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "Rishav Pandey",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.3"
